--- a/breakout/train.ipynb
+++ b/breakout/train.ipynb
@@ -1,332 +1,124 @@
-# Breakout_DQN_Training.ipynb
-
-import numpy as np
-import tensorflow as tf
-import matplotlib.pyplot as plt
-from IPython.display import clear_output
-
-# Game class
-class Game:
-    def __init__(self, width=800, height=600):
-        self.width = width
-        self.height = height
-        self.paddle = {'width': 75, 'height': 10, 'x': width / 2 - 37.5, 'y': height - 20}
-        self.ball = {'radius': 5, 'x': width / 2, 'y': height - 30, 'dx': 2, 'dy': -2}
-        self.bricks = []
-        self.score = 0
-        self.game_over = False
-        self.colors = ['#FF0000', '#FF7F00', '#FFFF00', '#00FF00', '#0000FF', '#4B0082', '#9400D3']
-        self.init_bricks()
-        self.last_ball_y = self.ball['y']
-        self.penalty_for_losing_ball = 0
-        self.reward_for_hitting_paddle = 0.1
-        self.ball_hit_paddle = False
-
-    def init_bricks(self):
-        brick_row_count = 6
-        brick_column_count = 13
-        brick_width = 61
-        brick_height = 20
-        brick_padding = 2
-        brick_offset_top = 30
-        brick_offset_left = 0
-
-        for r in range(brick_row_count):
-            for c in range(brick_column_count):
-                brick_x = c * (brick_width + brick_padding) + brick_offset_left
-                brick_y = r * (brick_height + brick_padding) + brick_offset_top
-                self.bricks.append({
-                    'x': brick_x,
-                    'y': brick_y,
-                    'width': brick_width,
-                    'height': brick_height,
-                    'status': 1,
-                    'color': self.colors[r % len(self.colors)]
-                })
-
-    def move_paddle(self, direction):
-        speed = 15
-        if direction == 'left' and self.paddle['x'] > 0:
-            self.paddle['x'] -= speed
-        elif direction == 'right' and self.paddle['x'] + self.paddle['width'] < self.width:
-            self.paddle['x'] += speed
-        self.paddle['x'] = max(0, min(self.width - self.paddle['width'], self.paddle['x']))
-
-    def update(self):
-        if self.game_over:
-            return
-
-        self.last_ball_y = self.ball['y']
-
-        # Move the ball
-        self.ball['x'] += self.ball['dx']
-        self.ball['y'] += self.ball['dy']
-
-        # Ball collision with walls
-        if self.ball['x'] + self.ball['radius'] > self.width or self.ball['x'] - self.ball['radius'] < 0:
-            self.ball['dx'] = -self.ball['dx']
-        if self.ball['y'] - self.ball['radius'] < 0:
-            self.ball['dy'] = -self.ball['dy']
-
-        # Ball collision with paddle
-        if (self.ball['y'] + self.ball['radius'] > self.paddle['y'] and
-            self.ball['x'] > self.paddle['x'] and
-            self.ball['x'] < self.paddle['x'] + self.paddle['width']):
-            self.ball['dy'] = -self.ball['dy']
-            self.ball_hit_paddle = True
-
-        # Ball collision with bricks
-        for brick in self.bricks:
-            if brick['status'] == 1:
-                if (self.ball['x'] > brick['x'] and
-                    self.ball['x'] < brick['x'] + brick['width'] and
-                    self.ball['y'] > brick['y'] and
-                    self.ball['y'] < brick['y'] + brick['height']):
-                    self.ball['dy'] = -self.ball['dy']
-                    brick['status'] = 0
-                    self.score += 1
-                    if self.score == len(self.bricks):
-                        self.game_over = True
-
-        # Game over if ball touches bottom
-        if self.ball['y'] + self.ball['radius'] > self.height:
-            self.game_over = True
-
-    def get_reward(self):
-        reward = 0
-
-        # Reward for breaking bricks
-        if self.score > 0:
-            reward += self.score
-            self.score = 0
-
-        # Reward for hitting the paddle
-        if self.ball_hit_paddle:
-            reward += self.reward_for_hitting_paddle
-            self.ball_hit_paddle = False
-
-        # Penalty for losing the ball
-        if self.game_over:
-            reward += self.penalty_for_losing_ball
-
-        return reward
-
-    def reset(self):
-        self.paddle = {'width': 75, 'height': 10, 'x': self.width / 2 - 37.5, 'y': self.height - 20}
-        
-        angle = self.get_random_angle()
-        speed = 4
-        self.ball = {
-            'radius': 5,
-            'x': self.width / 2,
-            'y': self.height / 2,
-            'dx': np.cos(angle) * speed,
-            'dy': abs(np.sin(angle) * speed)
-        }
-
-        self.bricks = []
-        self.score = 0
-        self.game_over = False
-        self.init_bricks()
-        self.last_ball_y = self.ball['y']
-        self.ball_hit_paddle = False
-
-    def get_random_angle(self):
-        return np.random.uniform(210, 330) * np.pi / 180
-
-    def get_state(self):
-        state = [
-            self.paddle['x'] / self.width,
-            self.paddle['y'] / self.height,
-            self.ball['x'] / self.width,
-            self.ball['y'] / self.height
-        ]
-        
-        for brick in self.bricks:
-            if brick['status'] == 1:
-                state.extend([brick['x'] / self.width, brick['y'] / self.height])
-            else:
-                state.extend([-1, -1])
-        
-        return np.array(state)
-
-# DQNModel class
-class DQNModel:
-    def __init__(self, input_size, num_actions):
-        self.model = tf.keras.Sequential([
-            tf.keras.layers.Dense(128, activation='relu', input_shape=(input_size,)),
-            tf.keras.layers.Dense(256, activation='relu'),
-            tf.keras.layers.Dense(256, activation='relu'),
-            tf.keras.layers.Dense(256, activation='relu'),
-            tf.keras.layers.Dense(256, activation='relu'),
-            tf.keras.layers.Dense(num_actions, activation='linear')
-        ])
-        
-        self.model.compile(optimizer=tf.keras.optimizers.Adam(0.001), loss='mse')
-
-    def predict(self, state):
-        return self.model.predict(state)
-
-    def train(self, states, targets):
-        return self.model.fit(states, targets, epochs=1, verbose=0)
-
-# DQNAgent class
-class DQNAgent:
-    def __init__(self, input_size, num_actions, batch_size=1000, memory_size=100000, gamma=0.99,
-                 epsilon_start=1.0, epsilon_end=0.1, fixed_epsilon_episodes=1000,
-                 decay_epsilon_episodes=2000, target_update_episodes=10):
-        self.input_size = input_size
-        self.num_actions = num_actions
-        self.batch_size = batch_size
-        self.memory_size = memory_size
-        self.gamma = gamma
-        self.epsilon_start = epsilon_start
-        self.epsilon_end = epsilon_end
-        self.fixed_epsilon_episodes = fixed_epsilon_episodes
-        self.decay_epsilon_episodes = decay_epsilon_episodes
-        self.epsilon = epsilon_start
-        self.episode_count = 0
-        self.target_update_episodes = target_update_episodes
-        self.episodes_since_update = 0
-
-        self.model = DQNModel(input_size, num_actions)
-        self.target_model = DQNModel(input_size, num_actions)
-        self.update_target_model()
-
-        self.memory = []
-        self.losses = []
-
-    def act(self, state, training=True):
-        if training and np.random.rand() < self.epsilon:
-            return np.random.randint(self.num_actions)
-        else:
-            q_values = self.model.predict(state[np.newaxis, :])[0]
-            return np.argmax(q_values)
-
-    def remember(self, state, action, reward, next_state, done):
-        if len(self.memory) >= self.memory_size:
-            self.memory.pop(0)
-        self.memory.append((state, action, reward, next_state, done))
-
-    def update_target_model(self):
-        self.target_model.model.set_weights(self.model.model.get_weights())
-
-    def update_epsilon(self):
-        if self.episode_count <= self.fixed_epsilon_episodes:
-            self.epsilon = self.epsilon_start
-        else:
-            decay_progress = min(1, (self.episode_count - self.fixed_epsilon_episodes) / self.decay_epsilon_episodes)
-            self.epsilon = max(
-                self.epsilon_end,
-                self.epsilon_start - (self.epsilon_start - self.epsilon_end) * decay_progress
-            )
-
-    def replay(self):
-        if len(self.memory) < self.batch_size:
-            return
-
-        samples = self.sample_memory(self.batch_size)
-        states, actions, rewards, next_states, dones = map(np.array, zip(*samples))
-
-        current_q_values = self.model.predict(states)
-        next_q_values = self.target_model.predict(next_states)
-
-        targets = current_q_values.copy()
-        for i in range(self.batch_size):
-            if dones[i]:
-                targets[i, actions[i]] = rewards[i]
-            else:
-                targets[i, actions[i]] = rewards[i] + self.gamma * np.max(next_q_values[i])
-
-        loss = self.model.train(states, targets).history['loss'][0]
-        return loss
-
-    def sample_memory(self, batch_size):
-        return np.random.choice(self.memory, batch_size, replace=False)
-
-    def increment_episode(self):
-        self.episode_count += 1
-        self.episodes_since_update += 1
-        self.update_epsilon()
-
-        if self.episodes_since_update >= self.target_update_episodes:
-            self.update_target_model()
-            self.episodes_since_update = 0
-
-# Training loop
-def train_dqn(num_episodes, plot_interval=100):
-    game = Game()
-    input_size = 2 + 2 + (6 * 13 * 2)  # paddle (2) + ball (2) + bricks (6 rows * 13 columns * 2 coordinates)
-    agent = DQNAgent(input_size, 3)
-    
-    scores = []
-    epsilons = []
-    losses = []
-    
-    for episode in range(num_episodes):
-        game.reset()
-        state = game.get_state()
-        total_reward = 0
-        loss = 0
-        
-        while not game.game_over:
-            action = agent.act(state)
-            
-            if action == 0:
-                game.move_paddle('left')
-            elif action == 1:
-                game.move_paddle('right')
-            
-            game.update()
-            next_state = game.get_state()
-            reward = game.get_reward()
-            total_reward += reward
-            
-            agent.remember(state, action, reward, next_state, game.game_over)
-            state = next_state
-            
-            if len(agent.memory) >= agent.batch_size:
-                loss = agent.replay()
-        
-        agent.increment_episode()
-        scores.append(total_reward)
-        epsilons.append(agent.epsilon)
-        losses.append(loss)
-        
-        if (episode + 1) % plot_interval == 0:
-            plot_training_progress(scores, epsilons, losses)
-            print(f"Episode: {episode + 1}, Score: {total_reward}, Epsilon: {agent.epsilon:.4f}, Loss: {loss:.4f}")
-    
-    return agent, scores, epsilons, losses
-
-# Visualization function
-def plot_training_progress(scores, epsilons, losses):
-    clear_output(wait=True)
-    fig, (ax1, ax2, ax3) = plt.subplots(3, 1, figsize=(10, 15))
-    
-    ax1.plot(scores)
-    ax1.set_title('Score per Episode')
-    ax1.set_xlabel('Episode')
-    ax1.set_ylabel('Score')
-    
-    ax2.plot(epsilons)
-    ax2.set_title('Epsilon Value')
-    ax2.set_xlabel('Episode')
-    ax2.set_ylabel('Epsilon')
-    
-    ax3.plot(losses)
-    ax3.set_title('Smoothed Loss')
-    ax3.set_xlabel('Episode')
-    ax3.set_ylabel('Loss')
-    
-    plt.tight_layout()
-    plt.show()
-
-# Run training
-num_episodes = 10000  # You can adjust this value
-agent, scores, epsilons, losses = train_dqn(num_episodes)
-
-# Save the trained model
-agent.model.model.save('breakout_dqn_model')
-
-print("Training completed. Model saved as 'breakout_dqn_model'.")
+{
+ "cells": [
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "7d75f944-4c30-47c4-94ef-f545985e3b60",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[33mWARNING: Running pip as the 'root' user can result in broken permissions and conflicting behaviour with the system package manager. It is recommended to use a virtual environment instead: https://pip.pypa.io/warnings/venv\u001b[0m\u001b[33m\n",
+      "\u001b[0m\n",
+      "\u001b[1m[\u001b[0m\u001b[34;49mnotice\u001b[0m\u001b[1;39;49m]\u001b[0m\u001b[39;49m A new release of pip is available: \u001b[0m\u001b[31;49m23.3.1\u001b[0m\u001b[39;49m -> \u001b[0m\u001b[32;49m24.2\u001b[0m\n",
+      "\u001b[1m[\u001b[0m\u001b[34;49mnotice\u001b[0m\u001b[1;39;49m]\u001b[0m\u001b[39;49m To update, run: \u001b[0m\u001b[32;49mpython -m pip install --upgrade pip\u001b[0m\n",
+      "Note: you may need to restart the kernel to use updated packages.\n"
+     ]
+    }
+   ],
+   "source": [
+    "%pip install -q tensorflow matplotlib"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "01d94892-50ea-4c5c-8af1-e5033555cd77",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%load_ext autoreload\n",
+    "%autoreload 2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "337d8cad-bcca-4a0b-a5f5-3d32b715841f",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "b9732e14-0d35-4dc1-8601-8c45b38f2d39",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2024-10-20 14:57:47.377021: I external/local_xla/xla/tsl/cuda/cudart_stub.cc:32] Could not find cuda drivers on your machine, GPU will not be used.\n",
+      "2024-10-20 14:57:47.380337: I external/local_xla/xla/tsl/cuda/cudart_stub.cc:32] Could not find cuda drivers on your machine, GPU will not be used.\n",
+      "2024-10-20 14:57:47.389414: E external/local_xla/xla/stream_executor/cuda/cuda_fft.cc:485] Unable to register cuFFT factory: Attempting to register factory for plugin cuFFT when one has already been registered\n",
+      "2024-10-20 14:57:47.403241: E external/local_xla/xla/stream_executor/cuda/cuda_dnn.cc:8454] Unable to register cuDNN factory: Attempting to register factory for plugin cuDNN when one has already been registered\n",
+      "2024-10-20 14:57:47.407386: E external/local_xla/xla/stream_executor/cuda/cuda_blas.cc:1452] Unable to register cuBLAS factory: Attempting to register factory for plugin cuBLAS when one has already been registered\n",
+      "2024-10-20 14:57:47.419110: I tensorflow/core/platform/cpu_feature_guard.cc:210] This TensorFlow binary is optimized to use available CPU instructions in performance-critical operations.\n",
+      "To enable the following instructions: AVX2 FMA, in other operations, rebuild TensorFlow with the appropriate compiler flags.\n",
+      "2024-10-20 14:57:48.088475: W tensorflow/compiler/tf2tensorrt/utils/py_utils.cc:38] TF-TRT Warning: Could not find TensorRT\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Training completed. Model saved as 'breakout_dqn_model.keras'.\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/usr/local/lib/python3.10/dist-packages/keras/src/layers/core/dense.py:87: UserWarning: Do not pass an `input_shape`/`input_dim` argument to a layer. When using Sequential models, prefer using an `Input(shape)` object as the first layer in the model instead.\n",
+      "  super().__init__(activity_regularizer=activity_regularizer, **kwargs)\n",
+      "2024-10-20 14:57:48.799040: W tensorflow/core/common_runtime/gpu/gpu_device.cc:2343] Cannot dlopen some GPU libraries. Please make sure the missing libraries mentioned above are installed properly if you would like to use GPU. Follow the guide at https://www.tensorflow.org/install/gpu for how to download and setup the required libraries for your platform.\n",
+      "Skipping registering GPU devices...\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Import the necessary functions and classes\n",
+    "from train import train_dqn, DQNAgent, Game\n",
+    "\n",
+    "# Set the number of episodes for training\n",
+    "num_episodes = 1\n",
+    "\n",
+    "# Run the training\n",
+    "agent, scores, epsilons, losses = train_dqn(num_episodes)\n",
+    "\n",
+    "# Save the trained model\n",
+    "agent.model.model.save('breakout_dqn_model.keras')\n",
+    "\n",
+    "print(\"Training completed. Model saved as 'breakout_dqn_model.keras'.\")\n",
+    "\n",
+    "# If you want to plot the final results\n",
+    "from train import plot_training_progress\n",
+    "# plot_training_progress(scores, epsilons, losses)"
+   ]
+  }
+ ],
+ "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3 (ipykernel)",
+   "language": "python",
+   "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.10.12"
+  }
+ },
+ "nbformat": 4,
+ "nbformat_minor": 5
+}
