logs for debugging

--- a/airhockey/train.ipynb
+++ b/airhockey/train.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "2721a89d",
+   "id": "e30b745e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,7 +18,43 @@
    "metadata": {
     "scrolled": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Starting self-play training...\n",
+      "\n",
+      "Episode 0/10000 (12.8s)\n",
+      "Steps: 1000\n",
+      "P1: reward=-1.46, ε=0.62\n",
+      "P2: reward=2.69, ε=0.62\n",
+      "Buffer size: 1000\n",
+      "----------------------------------------\n",
+      "\n",
+      "Episode 1/10000 (28.6s)\n",
+      "Steps: 1000\n",
+      "P1: reward=-1.05, ε=0.37\n",
+      "P2: reward=3.15, ε=0.37\n",
+      "Buffer size: 2000\n",
+      "----------------------------------------\n",
+      "\n",
+      "Episode 2/10000 (46.4s)\n",
+      "Steps: 1000\n",
+      "P1: reward=-28.41, ε=0.23\n",
+      "P2: reward=-0.96, ε=0.23\n",
+      "Buffer size: 3000\n",
+      "----------------------------------------\n",
+      "\n",
+      "Episode 3/10000 (65.8s)\n",
+      "Steps: 1000\n",
+      "P1: reward=-1.67, ε=0.14\n",
+      "P2: reward=2.28, ε=0.14\n",
+      "Buffer size: 4000\n",
+      "----------------------------------------\n"
+     ]
+    }
+   ],
    "source": [
     "# Example notebook usage\n",
     "from train import AirHockeyEnv, train_agent\n",
