self play single model

--- a/airhockey/train.ipynb
+++ b/airhockey/train.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "e30b745e",
+   "id": "763985c5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,33 +25,89 @@
      "text": [
       "Starting self-play training...\n",
       "\n",
-      "Episode 0/10000 (12.8s)\n",
+      "Episode 0/10000 (2.9s)\n",
       "Steps: 1000\n",
-      "P1: reward=-1.46, ε=0.62\n",
-      "P2: reward=2.69, ε=0.62\n",
-      "Buffer size: 1000\n",
-      "----------------------------------------\n",
-      "\n",
-      "Episode 1/10000 (28.6s)\n",
-      "Steps: 1000\n",
-      "P1: reward=-1.05, ε=0.37\n",
-      "P2: reward=3.15, ε=0.37\n",
+      "P1: reward=-1.53\n",
+      "P2: reward=1.31\n",
+      "ε=0.88\n",
       "Buffer size: 2000\n",
       "----------------------------------------\n",
       "\n",
-      "Episode 2/10000 (46.4s)\n",
+      "Episode 1/10000 (3.3s)\n",
       "Steps: 1000\n",
-      "P1: reward=-28.41, ε=0.23\n",
-      "P2: reward=-0.96, ε=0.23\n",
-      "Buffer size: 3000\n",
+      "P1: reward=-1.00\n",
+      "P2: reward=1.47\n",
+      "ε=0.78\n",
+      "Buffer size: 4000\n",
       "----------------------------------------\n",
       "\n",
-      "Episode 3/10000 (65.8s)\n",
+      "Episode 2/10000 (4.3s)\n",
       "Steps: 1000\n",
-      "P1: reward=-1.67, ε=0.14\n",
-      "P2: reward=2.28, ε=0.14\n",
-      "Buffer size: 4000\n",
-      "----------------------------------------\n"
+      "P1: reward=-27.03\n",
+      "P2: reward=-1.30\n",
+      "ε=0.69\n",
+      "Buffer size: 6000\n",
+      "----------------------------------------\n",
+      "\n",
+      "Episode 3/10000 (5.8s)\n",
+      "Steps: 1000\n",
+      "P1: reward=-2.80\n",
+      "P2: reward=4.92\n",
+      "ε=0.61\n",
+      "Buffer size: 8000\n",
+      "----------------------------------------\n",
+      "\n",
+      "Episode 4/10000 (6.4s)\n",
+      "Steps: 1000\n",
+      "P1: reward=-1.27\n",
+      "P2: reward=0.75\n",
+      "ε=0.54\n",
+      "Buffer size: 10000\n",
+      "----------------------------------------\n",
+      "Player 1 hit the puck! Velocity: 4.6\n",
+      "\n",
+      "Episode 5/10000 (7.4s)\n",
+      "Steps: 1000\n",
+      "P1: reward=-2.19\n",
+      "P2: reward=0.51\n",
+      "ε=0.47\n",
+      "Buffer size: 12000\n",
+      "----------------------------------------\n",
+      "\n",
+      "Episode 6/10000 (8.2s)\n",
+      "Steps: 1000\n",
+      "P1: reward=1.01\n",
+      "P2: reward=-1.63\n",
+      "ε=0.42\n",
+      "Buffer size: 14000\n",
+      "----------------------------------------\n",
+      "\n",
+      "Episode 7/10000 (9.0s)\n",
+      "Steps: 1000\n",
+      "P1: reward=-2.25\n",
+      "P2: reward=2.66\n",
+      "ε=0.37\n",
+      "Buffer size: 16000\n",
+      "----------------------------------------\n",
+      "Player 1 hit the puck! Velocity: 4.5\n",
+      "\n",
+      "Episode 8/10000 (9.5s)\n",
+      "Steps: 1000\n",
+      "P1: reward=-1.40\n",
+      "P2: reward=0.15\n",
+      "ε=0.33\n",
+      "Buffer size: 18000\n",
+      "----------------------------------------\n",
+      "\n",
+      "Episode 9/10000 (9.6s)\n",
+      "Steps: 1000\n",
+      "P1: reward=-0.46\n",
+      "P2: reward=0.05\n",
+      "ε=0.29\n",
+      "Buffer size: 20000\n",
+      "----------------------------------------\n",
+      "Player 0 hit the puck! Velocity: 4.5\n",
+      "Player 0 hit the puck! Velocity: 6.6\n"
      ]
     }
    ],
